assets/css/main.css
/* ... */
/* Small */

	@media screen and (max-width: 736px) {

		/* Basic */

			body, input, textarea, select {
				font-size: 11pt;
			}

			h2 {
				font-size: 1.25em;
			}

				h2.major {
					font-size: 1.25em;
					margin: 0 0 2em 0;
				}

					h2.major span {
						padding: 0 1em;
					}

		/* Section/Article */

			section, article {
				margin-bottom: 2em;
			}

		/* Button */

			input[type="button"],
			input[type="submit"],
			input[type="reset"],
			button,
			.button {
				display: block;
				width: 100%;
			}

				input[type="button"].large,
				input[type="submit"].large,
				input[type="reset"].large,
				button.large,
				.button.large {
					font-size: 1.25em;
				}

		/* Actions */

			ul.actions li {
				display: block;
				margin: 1em 0 0 0;
			}

				ul.actions li:first-child {
					margin-top: 0;
				}


			ul.contact li a:before{
				font-size: 28px
			}
		/* Special */

			ul.special {
				margin: -4em 0 2em -0.75em;
			}

				ul.special li {
					padding: 0.75em 0 0 0.75em;
				}

				ul.special li a:before {
					font-size: 35px;
				}

				ul.special li.saturn {
					transform: translate(0px, 22px)
				}

				ul.special li.saturn > a.saturn{
					font-size: 35px;
					width: 2em;
					height: 2em;
					transform: translate(0em, 0em)
				}

		/* Box */

			.box.highlight h2 {
				font-size: 2em;
			}

			.box.highlight header > p {
				font-size: 1.25em;
			}

			.box.post h3 {
				font-size: 2em;
			}

			.box.post header > p {
				font-size: 1.25em;
			}

			.box.page-content h2 {
				font-size: 2em;
			}

			.box.page-content header > p {
				font-size: 1.25em;
			}

		/* Banner */


		/* Main */

			#main {
				padding: 3em 0;
			}

		/* Sidebar */

			.sidebar {
				border-top: solid 2px #e7eae8;
				padding-top: 50px;
				margin-top: 30px;
			}

		/* Footer */

			#footer {
				padding: 3em 0;
			}

		/* Copyright */

			#copyright .menu li {
				display: block;
				border-left: 0;
				padding-left: 0;
				line-height: 1.75em;
			}

	}

/* Small */

	@media screen and (max-width: 360px) {

		/* Basic */

			body, input, textarea, select {
				font-size: 10pt;
			}

	}

	.planet {
		background: url('your-image-url.jpg');
		height: 20px;
		width: 20px;
		display: block;
		/* Other styles here */
	}

